# gravity-simulation

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  constants.c  constants.h  graphics.c  gravity.c  gravity.h  init.example.yaml  main.c  math_funcs.c  math_funcs.h  sphere_test.c  structures.h  test.c  test.comp  test.frag  test.vert
cmake/: mingw-toolchain.cmake
include/graphics/: controls.h  legend.h  orbits.h  render.h  render3d.h
include/math/: README.md  _README.md  math_funcs.h
include/math/matrix/: matrix3.h  matrix4.h
include/math/vector/: vector2.h  vector3.h  vector4.h
include/physics/: cr3bp.h  gravity.h  gravity3d.h
include/utils/: config_parser.h  constants.h  help.h  shaders_parser.h  structures.h  utils.h
lib/glad_3_1_compat/include/: glad.h
lib/glad_3_1_compat/src/: glad.c
lib/glad_4_6_core/: CMakeLists.txt
lib/glad_4_6_core/include/: glad.h
lib/glad_4_6_core/src/: glad.c
misc/: Cool_Init_Pos.txt  inner-planets.yaml  orbiting-blackholes-.yaml  singular-blackhole.yaml  sun-and-earth.yaml
misc/configs/: inner-planets.yaml  orbiting-blackholes-.yaml  orbiting-blackholes.yaml  singular-blackhole.yaml  sun-and-earth.yaml  two-suns.yaml
shaders/: circle.frag  circle.vert  grid.frag  grid.vert  legend.frag  orbit.frag  orbit.vert  sphere.frag  sphere.vert
src/: CMakeLists.txt  glad.c  main.c
src/graphics/: CMakeLists.txt  controls.c  legend.c  orbits.c  render.c  render3d.c
src/math/: CMakeLists.txt  math_funcs.c  matrix4.c  vector2.c  vector3.c  vector4.c
src/physics/: CMakeLists.txt  cr3bp.c  gravity.c  gravity3d.c
src/utils/: CMakeLists.txt  config_parser.c  constants.c  help.c  shaders_parser.c  utils.c
